--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "pdfmake": "^0.2.20",
-    "puppeteer": "^24.10.0",
+    "puppeteer-core": "^22.6.3",
+    "chrome-aws-lambda": "^10.1.0",
     "xlsx": "^0.18.5"
   }
 }
