--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "pdfmake": "^0.2.20",
-    "npm install puppeteer-core@10.2.0", 
-    "chrome-aws-lambda@10.1.0",
+    "puppeteer-core": "10.2.0",
+    "chrome-aws-lambda": "10.1.0"
     "xlsx": "^0.18.5"
   }
 }
