--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "nodemon": "^3.1.10",
     "pdfmake": "^0.2.20",
     "puppeteer-core": "10.2.0",
-    "chrome-aws-lambda": "10.1.0"
+    "chrome-aws-lambda": "10.1.0",
     "xlsx": "^0.18.5"
   }
 }
